--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -18,10 +18,8 @@ spec:
       labels:
         app: impc-api-service-dev
     spec:
-      imagePullSecrets:
-        - name: impcapiregistrycredentials
       containers:
-        - image: dockerhub.ebi.ac.uk/mouse-informatics/impc-mousephenotype-api:latest
+        - image: mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
           name: impc-api-service-dev
           env:
@@ -37,4 +35,3 @@ spec:
             - containerPort: 8080
               protocol: TCP
           resources: {}
-
