Change Docker reg strategy

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -18,6 +18,8 @@ spec:
       labels:
         app: impc-api-service-dev
     spec:
+      imagePullSecrets:
+        - name: trackerapiregistrycredentials
       containers:
         - image: mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
