Change Docker reg strategy

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -18,8 +18,10 @@ spec:
       labels:
         app: impc-api-service-dev
     spec:
+      imagePullSecrets:
+        - name: trackerapiregistrycredentials
       containers:
-        - image: mouse-informatics/impc-mousephenotype-api:latest
+        - image: dockerhub.ebi.ac.uk/mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
           name: impc-api-service-dev
           env:
@@ -35,3 +37,4 @@ spec:
             - containerPort: 8080
               protocol: TCP
           resources: {}
+
