--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -1,35 +1,37 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: impc-mousephenotype-api-dev
+  labels:
+    app: impc-mousephenotype-api-service-dev
+  name: impc-mousephenotype-api-service-dev
   namespace: mi-pa-test
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: impc-mousephenotype-api-service-dev
+  strategy:
+    type: Recreate
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app: impc-mousephenotype-api-dev
+        app: impc-mousephenotype-api-service-dev
     spec:
       containers:
-        - name: impc-mousephenotype-api-dev
-          image: "mouse-informatics/impc-mousephenotype-api:latest"
+        - image: mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
+          name: impc-mousephenotype-api-service-dev
+          env:
+            - name: IMPC_API_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: db_password
+          envFrom:
+            - configMapRef:
+                name: database-conn
           ports:
             - containerPort: 8080
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: impc-mousephenotype-api-dev
-  namespace: mi-pa-test
-  labels:
-    name: impc-mousephenotype-api-dev
-spec:
-  ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 8080
-  selector:
-    app: impc-mousephenotype-api-dev
-  type: NodePort
+              protocol: TCP
+          resources: {}
