--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -21,7 +21,7 @@ spec:
       imagePullSecrets:
         - name: impcapiregistrycredentials
       containers:
-        - image: mouse-informatics/impc-mousephenotype-api:latest
+        - image: dockerhub.ebi.ac.uk/mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
           name: impc-mousephenotype-api-service-dev
           env:
