Changed the deployment manifest and added service and ingress manifests to expose the service via gentar.

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -25,6 +25,8 @@ spec:
           imagePullPolicy: Always
           name: impc-mousephenotype-api-service-dev
           env:
+            - name: SERVER_SERVLET_CONTEXT_PATH
+              value: /impc-dev-api
             - name: IMPC_API_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -38,19 +40,3 @@ spec:
               protocol: TCP
           resources: {}
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: impc-mousephenotype-api-service-dev
-  namespace: mi-pa-test
-  labels:
-    name: impc-mousephenotype-api-service-dev
-spec:
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
-  selector:
-    app: impc-mousephenotype-api-service-dev
-  type: NodePort
