Modified the .gitlab-ci.yml file and impc-api-service-deployment.yaml manifest to ensure turnover of the service and that the Docker image is built using local images.

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -31,12 +31,19 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: db-credentials
-                  key: db_password
+                  key: db_passwor
+            - name: REDEPLOY_KEY
+              value: "STRING_REPLACED_DURING_REDEPLOY"
           envFrom:
             - configMapRef:
                 name: database-conn
           ports:
             - containerPort: 8080
               protocol: TCP
+          livenessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 120
+            periodSeconds: 60
           resources: {}
 
