--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,9 @@ build_main_image:
   services:
     - name: $CI_REGISTRY/mouse-informatics/dind:latest
       alias: docker
-  except:
-    - schedules
+  rules:
+    - if: '$CI_BUILD_REF_NAME == "master" && $CI_PIPELINE_SOURCE != "schedule"'
+      when: on_success
   before_script:
     - mkdir -p "$MOUNT_POINT"
     - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin  ${CI_REGISTRY}
@@ -92,9 +93,7 @@ build_main_image:
   artifacts:
     paths:
       - "$MOUNT_POINT/"
-  only:
-    refs:
-      - main
+
 
 hx-dev:
   stage: dev-deploy
