Fixed the name of the key for the db-credentials.

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -31,7 +31,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: db-credentials
-                  key: db_passwor
+                  key: db_password
             - name: REDEPLOY_KEY
               value: "STRING_REPLACED_DURING_REDEPLOY"
           envFrom:
