Modified the deployment manifest to capture the access log information in a side-car container.

--- a/k8-deploy/dev/impc-api-service-deployment.yaml
+++ b/k8-deploy/dev/impc-api-service-deployment.yaml
@@ -20,13 +20,14 @@ spec:
     spec:
       imagePullSecrets:
         - name: impcapiregistrycredentials
+      volumes:
+        - name: tomcatlog
+          emptyDir: {}
       containers:
         - image: dockerhub.ebi.ac.uk/mouse-informatics/impc-mousephenotype-api:latest
           imagePullPolicy: Always
           name: impc-mousephenotype-api-service-dev
           env:
-            - name: SERVER_SERVLET_CONTEXT_PATH
-              value: /impc-dev-api
             - name: IMPC_API_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -34,6 +35,20 @@ spec:
                   key: db_password
             - name: REDEPLOY_KEY
               value: "STRING_REPLACED_DURING_REDEPLOY"
+            - name: SERVER_SERVLET_CONTEXT_PATH
+              value: /impc-dev-api
+            - name: SERVER_TOMCAT_BASEDIR
+              value: /tomcat
+            - name: SERVER_TOMCAT_ACCESSLOG_ENABLED
+              value: /tomcat
+            - name: SERVER_TOMCAT_ACCESSLOG_DIRECTORY
+              value: /tomcat
+            - name: SERVER_TOMCAT_ACCESSLOG_ROTATE
+              value: /tomcat
+            - name: SERVER_TOMCAT_ACCESSLOG_FILE-DATE-FORMAT
+              value: 
+            - name: SERVER_TOMCAT_ACCESSLOG_PATTERN
+              value: "%t %{X-Original-Forwarded-For}i %{X-Forwarded-For}i %s \"%r\" %b (%D ms) %{User-Agent}i %a %{Referer}i"
           envFrom:
             - configMapRef:
                 name: database-conn
@@ -46,4 +61,21 @@ spec:
             initialDelaySeconds: 120
             periodSeconds: 60
           resources: {}
+          volumeMounts:
+            - name: tomcatlog
+              mountPath: /tomcat/logs
+        - image: dockerhub.ebi.ac.uk/mouse-informatics/alpine:latest
+          imagePullPolicy: Always
+          name: api-accesslog
+          args: [/bin/sh, -c, 'tail -n+1 -f /tomcat/logs/access_log.log']
+          readinessProbe:
+            exec:
+              command:
+                - ls
+                - /tomcat/logs/access_log.log
+            failureThreshold: 30
+            periodSeconds: 10
+          volumeMounts:
+            - name: tomcatlog
+              mountPath: /tomcat/logs
 
