--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,7 @@ stages:
   #   - env
   - build
   - dev-deploy
+  - prod-deploy
 
 # env:
 #   stage: env
@@ -117,6 +118,67 @@ hx-dev:
         if kubectl apply -f k8-deploy/dev/impc-api-service-deployment.yaml --record | grep -q unchanged; then
             echo "=> Patching deployment to force image update."
             kubectl patch -f k8-deploy/dev/impc-api-service-deployment.yaml --record -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"ci-last-updated\":\"$(date +'%s')\"}}}}}"
+        else
+            echo "=> Deployment apply has changed the object, no need to force image update."
+        fi
+
+        kubectl get pod,deployment,rs,svc,ing
+      fi
+
+
+
+hh-prod:
+  stage: prod-deploy
+  image: $CI_REGISTRY/mouse-informatics/helm-kubectl-alpine:latest
+  rules:
+    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_BUILD_REF_NAME == "main"'
+  script:
+    # Only deploy from the MPI2 impc-mousephenotype-api repository rather than repository forks
+    - |
+      if [ ! -z ${HH_KUBERNETES_ENDPOINT+set} ]; then
+
+        kubectl config set-cluster local --server="${HH_KUBERNETES_ENDPOINT}"
+        kubectl config set clusters.local.certificate-authority-data "${HH_KUBERNETES_CERTIFICATE_AUTHORITY_DATA}"
+        kubectl config set-credentials ${HH_KUBERNETES_PROD_USER} --token="${HH_KUBERNETES_PROD_USER_TOKEN}"
+        kubectl config set-context "${HH_KUBERNETES_PROD_NAMESPACE}" --cluster=local --user=${HH_KUBERNETES_PROD_USER} --namespace="${HH_KUBERNETES_PROD_NAMESPACE}"
+        kubectl config use-context "${HH_KUBERNETES_PROD_NAMESPACE}"
+        kubectl version
+
+        sed -i "s/STRING_REPLACED_DURING_REDEPLOY/$(date)/g" k8-deploy/prod/impc-api-service-deployment.yaml
+
+        if kubectl apply -f k8-deploy/prod/impc-api-service-deployment.yaml --record | grep -q unchanged; then
+            echo "=> Patching deployment to force image update."
+            kubectl patch -f k8-deploy/prod/impc-api-service-deployment.yaml --record -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"ci-last-updated\":\"$(date +'%s')\"}}}}}"
+        else
+            echo "=> Deployment apply has changed the object, no need to force image update."
+        fi
+
+        kubectl get pod,deployment,rs,svc,ing
+      fi
+
+
+hx-prod:
+  stage: prod-deploy
+  image: $CI_REGISTRY/mouse-informatics/helm-kubectl-alpine:latest
+  rules:
+    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_BUILD_REF_NAME == "main"'
+  script:
+    # Only deploy from the MPI2 impc-mousephenotype-api repository rather than repository forks
+    - |
+      if [ ! -z ${HX_KUBERNETES_ENDPOINT+set} ]; then
+
+        kubectl config set-cluster local --server="${HX_KUBERNETES_ENDPOINT}"
+        kubectl config set clusters.local.certificate-authority-data "${HX_KUBERNETES_CERTIFICATE_AUTHORITY_DATA}"
+        kubectl config set-credentials ${HX_KUBERNETES_PROD_USER} --token="${HX_KUBERNETES_PROD_USER_TOKEN}"
+        kubectl config set-context "${HX_KUBERNETES_PROD_NAMESPACE}" --cluster=local --user=${HX_KUBERNETES_PROD_USER} --namespace="${HX_KUBERNETES_PROD_NAMESPACE}"
+        kubectl config use-context "${HX_KUBERNETES_PROD_NAMESPACE}"
+        kubectl version
+
+        sed -i "s/STRING_REPLACED_DURING_REDEPLOY/$(date)/g" k8-deploy/prod/impc-api-service-deployment.yaml
+
+        if kubectl apply -f k8-deploy/prod/impc-api-service-deployment.yaml --record | grep -q unchanged; then
+            echo "=> Patching deployment to force image update."
+            kubectl patch -f k8-deploy/prod/impc-api-service-deployment.yaml --record -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"ci-last-updated\":\"$(date +'%s')\"}}}}}"
         else
             echo "=> Deployment apply has changed the object, no need to force image update."
         fi
