--- a/k8-deploy/prod/impc-api-service-svc.yaml
+++ b/k8-deploy/prod/impc-api-service-svc.yaml
@@ -9,6 +9,7 @@ spec:
   ports:
     - protocol: TCP
       port: 8080
+      nodePort: 30066
   selector:
     app: impc-mousephenotype-api-service
   type: NodePort
