--- a/k8-deploy/prod/impc-api-service-deployment.yaml
+++ b/k8-deploy/prod/impc-api-service-deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - name: REDEPLOY_KEY
               value: "STRING_REPLACED_DURING_REDEPLOY"
             - name: SERVER_SERVLET_CONTEXT_PATH
-              value: /bulkdata-api
+              value: /mi/impc/bulkdata-api/
             - name: SERVER_TOMCAT_BASEDIR
               value: /tomcat
             - name: SERVER_TOMCAT_ACCESSLOG_ENABLED
