--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build_main_image:
     - name: $CI_REGISTRY/mouse-informatics/dind:latest
       alias: docker
   rules:
-    - if: '$CI_BUILD_REF_NAME == "main" && $CI_PIPELINE_SOURCE != "schedule"'
+    - if: '$CI_COMMIT_REF_NAME == "main" && $CI_PIPELINE_SOURCE != "schedule"'
       when: on_success
   before_script:
     - mkdir -p "$MOUNT_POINT"
@@ -100,7 +100,7 @@ hx-dev:
   stage: dev-deploy
   image: $CI_REGISTRY/mouse-informatics/helm-kubectl-alpine:latest
   rules:
-    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_BUILD_REF_NAME == "main"'
+    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_COMMIT_REF_NAME == "main"'
   script:
     # Only deploy from the MPI2 impc-mousephenotype-api repository rather than repository forks
     - |
@@ -131,7 +131,7 @@ hh-prod:
   stage: prod-deploy
   image: $CI_REGISTRY/mouse-informatics/helm-kubectl-alpine:latest
   rules:
-    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_BUILD_REF_NAME == "main"'
+    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_COMMIT_REF_NAME == "main"'
   script:
     # Only deploy from the MPI2 impc-mousephenotype-api repository rather than repository forks
     - |
@@ -161,7 +161,7 @@ hx-prod:
   stage: prod-deploy
   image: $CI_REGISTRY/mouse-informatics/helm-kubectl-alpine:latest
   rules:
-    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_BUILD_REF_NAME == "main"'
+    - if: '$PRODUCTION_DEPLOYMENT != "true" && $CI_PROJECT_NAMESPACE == "mouse-informatics" && $CI_COMMIT_REF_NAME == "main"'
   script:
     # Only deploy from the MPI2 impc-mousephenotype-api repository rather than repository forks
     - |
